--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,9 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.6.1-R0.1-SNAPSHOT</version>
+            <version>1.6.2-R0.1</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/spigot-api.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
