--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,12 @@
     </properties>
     <repositories>
         <repository>
-            <id>cna-public-repos</id>
-            <url>http://nexus.cube-nation.de/content/groups/public/</url>
+            <id>md_5-releases</id>
+            <url>http://repo.md-5.net/content/repositories/releases/</url>
+        </repository>
+        <repository>
+            <id>md_5-snapshots</id>
+            <url>http://repo.md-5.net/content/repositories/snapshots/</url>
         </repository>
     </repositories>
     <build>
@@ -49,9 +53,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.6.2-R0.1</version>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.7.2-R0.1</version>
             <scope>system</scope>
             <systemPath>${basedir}/spigot-api.jar</systemPath>
         </dependency>
